# pp_py

./: AlgoClient.py  ArrayVisualizer.py  CLI.py  GridEditer.py  LICENSE  LocalClient.py  README.md  ServerCore.py  Visualizer.py  WorkDq.py  client.py  commend.txt  grid.csv  main.py  nxTest.py  pyproject.toml  raw_commend  server.py  tmb.py  typer_test.py
config/: config.json
csv/: grid.csv
etc/: client_test.py  input_test.py  nxTest.py  server.py
panda3d_examples/: Visualizer.py  panda3d_highlight.py  panda3d_simple.py  panda3d_test.py  panda3d_test2.py  panda3d_test3.py  panda3d_test_gpt.py  panda3d_testure.py  panda3d_texture2.py
