[tool.poetry]
name = "thimphu"
version = "0.1.0"
description = "python project for control the logistic grid robot"
authors = ["jonwo <jonwo@DESKTOP-CU55C7G>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
networkx = "^3.3"
spyder = "^5.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
